# retrotoolkit

./: .editorconfig  .gitattributes  .gitignore  BuildLinux32Debug.sh  BuildLinux32Release.sh  BuildLinux64Debug.sh  BuildLinux64Release.sh  BuildLinuxDebug.sh  BuildMSVC2019Debug.cmd  BuildRuntimes.cmd  CMakeLists.txt  GenMSVC2019.cmd  GenMinGW32Debug.cmd  README.md
CMake/: Bin2C.cmake  Common.cmake  Info.plist.in
Doc/: DeveloperNotes.md
Libs/: CMakeLists.txt
Libs/Asm/gradle/: gradlew.bat
Libs/AudioFile/: CMakeLists.txt  config.h.in
Libs/Bas2Tap/: CMakeLists.txt  bas2tap.c
Libs/Catch/: CMakeLists.txt  catch.hpp
Libs/FuseUtils/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  audio2tape.cc  audio2tape.h  audio2tape_res.rc  config.h.in  configure  configure.ac  createhdf.c  createhdf_res.rc  fmfconv.c  fmfconv.h  fmfconv_compr.c  fmfconv_compr.h  fmfconv_res.rc  fmfconv_types.c  fmfconv_types.h  ide.c  ide.h  keys.c  listbasic.c  listbasic_res.rc  movie_tables.h  profile2map.c  profile2map_res.rc  raw2hdf.c  raw2hdf_res.rc  rzxcheck.c  rzxcheck_res.rc  rzxdump.c  rzxdump_res.rc  rzxtool.c  rzxtool_res.rc  scl2trd.c  scl2trd_res.rc  snap2tzx.c  (+13 more)
Libs/FuseUtils/compat/: Makefile.am
Libs/FuseUtils/converter/: findpilot.cc  findpilot.h  findsync1.cc  findsync1.h  getpulse1.cc  getpulse1.h  getpulse2.cc  getpulse2.h  getsync2.cc  getsync2.h  romloader.cc  romloader.h  romloaderstate.cc  romloaderstate.h
Libs/FuseUtils/fmfconv_output/: fmfconv_aiff.c  fmfconv_au.c  fmfconv_avi.c  fmfconv_jpg.c  fmfconv_png.c  fmfconv_ppm.c  fmfconv_scr.c  fmfconv_wav.c  fmfconv_yuv.c
Libs/FuseUtils/hacking/: Makefile.am
Libs/FuseUtils/importer/: interpolator.h  schmitt.h  simple.h  soundfile.cc  soundfile.h  trigger.cc  trigger.h
Libs/FuseUtils/m4/: Makefile.am
Libs/FuseUtils/man/: Makefile.am  audio2tape.1  createhdf.1  fmfconv.1  fuse-utils.1  listbasic.1  profile2map.1  raw2hdf.1  rzxcheck.1  rzxdump.1  rzxtool.1  scl2trd.1  snap2tzx.1  snapconv.1  snapdump.1  tape2pulses.1  tape2wav.1  tapeconv.1  tzxlist.1
Libs/LZSA/: BlockFormat_LZSA1.md  BlockFormat_LZSA2.md  CMakeLists.txt  README.md  StreamFormat.md
Libs/LZSA/VS2017/: lzsa.sln  lzsa.vcxproj  lzsa.vcxproj.filters
Libs/LZSA/src/: lib.h  lzsa.c  shrink_block_v2.c  shrink_context.c  shrink_context.h
Libs/LibSpectrum/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  accessor.pl  aclocal.m4  configure  generate.pl.in  internals.h  libspectrum.c  make-perl.c  pzx_read.c  snap_accessors.c  szx.c  tape.c
Libs/LibSpectrum/cmake/: capabilities.h  define_types.h  glib_replacement.h  snap_accessors.h  tape_accessors.h
Libs/LibSpectrum/doc/: libspectrum.txt
Libs/LibSpectrum/test/: Makefile.am  szx.c  test.c  test_edges.c
Libs/RapidXML/: CMakeLists.txt
Libs/SDL2/: CMakeLists.txt
Libs/SDL2/cmake/: macros.cmake  sdlchecks.cmake
Libs/SDL2/include/: SDL_egl.h
Libs/TinyXML/: CMakeLists.txt  tinyxml.cpp  tinyxml.h
Libs/Z80/: CMakeLists.txt
Libs/ZX0/: CMakeLists.txt
Libs/ZX0/src/: compress.c  memory.c  optimize.c  zx0.h
Libs/ZX7/: CMakeLists.txt
Libs/ZX7/asm/: dzx7_mega_back.asm  dzx7_standard_back.asm  dzx7_turbo_back.asm
Libs/ZX7/src/: compress.c  dzx7.c  optimize.c  zx7.c  zx7.h
Sources/: CMakeLists.txt
Sources/Assembler/: CMakeLists.txt  Instruction.cpp  Instruction.h  Instructions.Z80.h  OpcodeParseContext.h
Sources/Common/: CMakeLists.txt  Common.h  CompilerError.cpp  CompilerError.h  Conversion.cpp  Conversion.h  GC.cpp  GC.h  IO.cpp  IO.h  SourceLocation.cpp  SourceLocation.h  StreamUtils.cpp  StreamUtils.h  StringSet.h  Strings.cpp  Strings.h  TemplateMagic.h  Xml.cpp  Xml.h
Sources/Compiler/: BasicCompiler.cpp  BasicCompiler.h  CMakeLists.txt  Compiler.cpp  Compiler.h  CompilerError.cpp  CompilerError.h  ExpressionParser.cpp  ExpressionParser.h  Lexer.cpp  Lexer.h  LexerUtils.cpp  LexerUtils.h  ParsingContext.cpp  ParsingContext.h  Project.cpp  Project.h  SourceFile.cpp  SourceFile.h  SpectrumBasicCompiler.cpp  SpectrumBasicCompiler.h  Token.cpp  Token.h
Sources/Compiler/Assembler/: AssemblerContext.cpp  AssemblerContext.h  AssemblerContextIf.cpp  AssemblerContextIf.h  AssemblerParser.cpp  (+20 more)
Sources/Emulator/: CMakeLists.txt  Common.h  Disassembler.cpp  Disassembler.h  Emulator.cpp  Emulator.h  Snapshot.cpp  Snapshot.h  Z80Cpu.cpp  Z80Cpu.h  Z80Memory.cpp  Z80Memory.h  Z80Screen.cpp  Z80Screen.h
Sources/GUI/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  BuildDialog.cpp  BuildDialog.h  BuildDialog.ui  CMakeLists.txt  Common.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PlayAudioDialog.cpp  PlayAudioDialog.h  PlayAudioDialog.ui  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  ThirdPartyDialog.cpp  ThirdPartyDialog.h  ThirdPartyDialog.ui  main.cpp
Sources/Java/: Build.cmd  CMakeEmbedClasses.cmake  CMakeLists.txt  Clean.cmd  Compile.cmd  JavaClasses.cpp  build.xml
Sources/Java/Classpath/java/io/: Serializable.java
Sources/Java/Classpath/java/lang/: Class.java  Deprecated.java  Enum.java  Object.java  Override.java  Package.java  String.java  System.java  Throwable.java
Sources/Java/Classpath/java/lang/annotation/: Annotation.java  ElementType.java  Retention.java  Target.java
Sources/Java/Tools/drunkfly/: Builder.java  BuilderClassLoader.java  BuilderLauncher.java  Bytes.java  Gfx.java  GfxFormat.java  Hash.java  IO.java  Mathf.java  Messages.java  Output.java  RGB.java  Tile.java  Tilemap.java  Tileset.java  Util.java  ZXImage.java  ZXPalette.java  ZXScreen.java  ZXUtil.java
Sources/Java/Tools/drunkfly/internal/: BuilderClassLoader.java  BuilderLauncher.java  InputFile.java  OutputFile.java  SourceFiles.java
Sources/Java/Tools/drunkfly/jni/: AccessibleWithJNI.java  CallableWithJNI.java  JNITool.java
Sources/Runtimes/: CMakeLists.txt
Sources/Tests/: CMakeLists.txt  CaseTests.cpp  Common.h  DataTests.cpp  EquTests.cpp  ErrorTests.cpp  ExprTests.cpp  IfTests.cpp  LabelTests.cpp  OpcodeTests.cpp  RepeatTests.cpp  genopcodetests.cmd  genopcodetests.py  main.cpp
Test/: Test.8bit  Test.retro  boot.bas  test.asm
(+1481 files in other folders)
